Closed Bug 1726900 Opened 3 years ago Closed 3 years ago

Starting Thunderbird minimized in Windows10 the tray-icon vanishes

Categories

(Thunderbird :: OS Integration, defect)

Thunderbird 91
defect

Tracking

(thunderbird_esr91+ fixed, thunderbird92 wontfix)

RESOLVED FIXED
93 Branch
Tracking Status
thunderbird_esr91 + fixed
thunderbird92 --- wontfix

People

(Reporter: u690967, Assigned: rnons)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached image Capture.JPG

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:91.0) Gecko/20100101 Firefox/91.0

Steps to reproduce:

Created a shortcut forThunderbird in Windows 10 with the property to run minimized in shell:startup.

Actual results:

Thunderbird starts but the trayicon will vanish after time or mousehovering.

Expected results:

The tray Icon should be visible all time.

I seem to recall that start minimized does not work well in general.

Thunderbird starts but the trayicon

You mean the task bar? Or the system notification area in standard location bottom right?

Flags: needinfo?(bugzilla)

(In reply to Wayne Mery (:wsmwk) from comment #1)

You mean the task bar? Or the system notification area in standard location bottom right?

The latter one.

Flags: needinfo?(bugzilla)

I also confirmed the same behavior.

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:91.0) Gecko/20100101 Thunderbird/91.0.3

Steps to reproduce:

  1. Start Thunderbird and go Preferences > General > System Integration.
  2. Check "When Thunderbird is minimized, move it to the tray"
  3. Exit Thunderbird.
  4. Modfy the property of Thunderbird shortcut to run minimized in shell:startup.
  5. Start Thunderbird with modified shortcut.

Regression window:
https://hg.mozilla.org/comm-central/pushloghtml?fromchange=128dc4359c7f5f806bba8390fe91172140b48bec&tochange=48afdbe161e8fd19963557db798dca685fb46878

We found a bug in the icon initialisation which we patched over here:
https://github.com/Betterbird/thunderbird-patches/blob/main/91/bugs/1721063-Windows-systray-tooltip.patch#L197
Basically if you run show the icon (in nsMessengerWinIntegration::HideWindow()) before running nsMessengerWinIntegration::UpdateTrayIcon(), you get an "unstable" systray icon which will disappear on hover. Took us ages to find :-(

In Thunderbird, you can get the same effect by setting pref mail.biff.use_new_count_in_mac_dock and starting non-minimised without new mail, then minimise. The resulting icon is "unstable". You should adjust the bug summary accordingly.

Assignee: nobody → remotenonsense
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Regressed by: 715799
See Also: → 1726696
Target Milestone: --- → 93 Branch

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/10ca11fe4fa8
Make sure a window is associated with the tray icon on Windows. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED

We'll want this on 91.1.1.

beta crash rate (version 92) is only 1/day, so seeing this fix on 91.1.1 where the crash rate is ~15/day will be a more definitive test of how much this helps.

Depends on: 1726696
Flags: needinfo?(remotenonsense)
Keywords: regression
See Also: 1726696

Comment on attachment 9238449 [details]
Bug 1726900 - Make sure a window is associated with the tray icon on Windows. r=mkmelin

[Approval Request Comment]
Regression caused by (bug #): bug 715799
User impact if declined: Starting TB minimized on Windows10 doesn't work
Testing completed (on c-c, etc.): beta
Risk to taking this patch (and alternatives if risky): low

Flags: needinfo?(remotenonsense)
Attachment #9238449 - Flags: approval-comm-esr91?
Blocks: tb91found

Comment on attachment 9238449 [details]
Bug 1726900 - Make sure a window is associated with the tray icon on Windows. r=mkmelin

[Triage Comment]

Attachment #9238449 - Flags: approval-comm-esr91? → approval-comm-esr91+
Blocks: 1726696
No longer depends on: 1726696
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: