Bug 1726900 - Make sure a window is associated with the tray icon on Windows. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D123916

--HG--
extra : moz-landing-system : lando